Fix h1 spacing and bulma load order

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,10 @@
   font-weight: bold;
 }
 
+h1 {
+  margin-top: 1.1428em;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Nixie One";
   letter-spacing: 1px;
